Fix wrapping on the homepage. Fixed #132.

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -215,14 +215,10 @@ header.main-menu .logo {
   top: 70px;
 }
 header.main-menu h1 {
-  left: 215px;
-  top: 0;
-  right: 50px;
+  width: 100%;
 
   padding: 0;
   margin: 0;
-
-  position: absolute;
 
   font-size: @fontSize * 2;
   font-weight: 300;
@@ -234,6 +230,8 @@ header.main-menu h1 {
   height: 100%;
 }
 header.main-menu h1 div {
+  padding-left: 215px;
+  padding-right: 50px;
   display: table-cell;
   vertical-align: middle;  
 }
